src/css/header.css
.header {
  padding: 18px 20px;
  background-color: #fff;
  display: flex;
  align-items: center;
  border-radius: 0px 0px 8px 8px;
  border: 1.5px solid #111;
  transition: background-color 0.5s;
  position: relative;
}

@media only screen and (min-width: 768px) {
  .header {
    padding: 27px 32px;
  }
}
@media only screen and (min-width: 1440px) {
  .header {
    padding: 27px 24px;
  }
}

@media only screen and (max-width: 767.98px) {
  .nav-list {
    display: none;
  }
  .a-shoppinglist {
    display: none;
  }
}

@media only screen and (min-width: 768px) {
  .nav-list {
    display: flex;
    gap: 24px;
    margin-left: 40px;
  }
}

@media only screen and (min-width: 1440px) {
  .nav-list {
    margin-left: 76px;
  }
}
/* .nav-list {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 40px;
} */

.a-home {
  /* color: #111; */
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 1.28;
  letter-spacing: -0.56px;
  text-transform: uppercase;
  transition: color 0.5s;
  /* padding-top: 18px;
  padding-bottom: 18px; */
}

.a-shoppinglist {
  /* color: #111; */
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  /* line-height: 18px; */
  letter-spacing: -0.56px;
  text-transform: uppercase;

  transition: color 0.5s;
}

.nav-link {
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.5;
}

.nav-link:hover,
.nav-link:focus {
  color: #747bff;
}

body {
  transition: background-color 0.5s;
}

.dark-mode {
  background-color: #202024;
  color: #fff;
}

.header-dark-mode {
  background-color: #111;
  border: 1.5px solid #fff;
  color: #fff;
}

.dark-mode-header-link {
  color: #fff;
}

.side-menu-dark-mode {
  color: rgba(255, 255, 255, 0.6);
}

.shopping-bag-dark {
  fill: #fff;
}
.logo-dark-mode {
  fill: #fff;
}

.switch {
  position: relative;
  display: inline-block;
  width: 40px;
  height: 20px;
  margin-left: auto;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1) inset;

  transition: background 500ms;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: '';
  width: 17px;
  height: 17px;
  left: 2px;
  bottom: 1.52px;
  background-color: white;
  transition: 0.4s;
  border-radius: 50%;
}

input:checked + .slider {
  background: linear-gradient(rgba(79, 46, 232, 1), rgba(104, 104, 104, 1));
}

input:checked + .slider:before {
  transform: translateX(19px);
}

input:checked + .burger-menu-icon {
  fill: #fff;
}

.header-logo-wrapper {
  display: flex;
  align-items: center;
  gap: 8px;
}

.nav-item {
  font-size: 14px;
  display: flex;
  align-items: center;
}

.a-shoppinglist {
  display: flex;
  align-items: center;
  gap: 4px;
}

.shopping-bag {
  transition: fill 500ms;
}
.header-logo-2 {
  transition: fill 500ms;
}

.open-menu-btn {
  border: none;
  background-color: inherit;
  padding: 0;
  margin-left: 14px;
}

.close-menu-btn {
  border: none;
  background-color: inherit;
  padding: 0;
  margin-left: 14px;
}

@media only screen and (min-width: 768px) {
  .open-menu-btn {
    display: none;
  }
}

.burger-menu-icon {
  fill: rgba(17, 17, 17, 1);
  transition: fill 500ms;
}

.burger-menu-icon-dark {
  fill: #fff;
}

.burger-menu-icon:hover,
.burger-menu-icon:focus {
  fill: rgba(79, 46, 232, 1);
}

/* Mobile-menu */

/* .menu-data-modile {
  position: absolute;
  display: none;
  background-image: url(../img/global/books-mobile-bg-2x.png),
    radial-gradient(
      189.32% 190.93% at 59.76% -23.42%,
      #4f2ee8 18.03%,
      #fff 100%
    );
  background-size: contain;
  background-repeat: no-repeat;
  background-position: bottom;
  top: 69px;
  left: 0;
  width: 100%;
  height: 100vh;

  z-index: 10;

  opacity: 0;
  transition: opacity 0.3s ease;
} */

.menu-data-modile {
  position: absolute;
  display: none;
  background-image: url(../img/global/books-mobile-bg-2x.png),
    radial-gradient(
      189.32% 190.93% at 59.76% -23.42%,
      #4f2ee8 18.03%,
      #fff 100%
    );
  background-size: contain;
  background-repeat: no-repeat;
  background-position: bottom;
  top: 69px;
  left: -1px;

  width: 101%;
  height: 100vh;
  z-index: 10;

  /* opacity: 0;
  transition: opacity 400ms ease; */
}

/* .menu-data-modile.show {
  display: block;
  opacity: 1;
} */

.menu-mobile-content {
  display: flex;
  flex-direction: column;
  padding-top: 183px;
  align-items: flex-start;
  gap: 16px;
  padding-left: 109px;
}

.home-mobile {
  color: #fff;

  font-family: DM Sans;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 18px;
  letter-spacing: -0.56px;
  text-transform: uppercase;
}
.shopping-mobile {
  color: #fff;

  font-family: DM Sans;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 18px;
  letter-spacing: -0.56px;
  text-transform: uppercase;
  display: flex;
  gap: 4px;
}

.shopping-bag-mobile {
  fill: #fff;
}

.mobile-close-icon {
  stroke: rgba(17, 17, 17, 1);
  transition: stroke 500ms;
}

.mobile-close-icon-dark {
  stroke: #fff;
}

.mobile-close-icon:hover,
.mobile-close-icon:focus {
  stroke: rgba(79, 46, 232, 1);
}

.close-menu-btn {
  display: none;
}

.a-home-active {
  color: #111;
  padding: 8px 16px;
  background: #eac645;
  border-radius: 36px;
  font-weight: 700;
}
.a-shopping-active {
  color: #111;
  padding: 7px 16px;
  background: #eac645;
  border-radius: 36px;
  font-weight: 700;
}

.categories-list {
  color: rgba(17, 17, 17, 0.6);
}

.dark-mode .categories-list {
  color: rgba(255, 255, 255, 0.6);
}

.dark-mode .categories-list li:hover {
  color: rgba(234, 198, 69, 1);
}

/* .categories-list-dark-mode {
  color: rgba(255, 255, 255, 0.6);
} */

/* .categories-list-dark-mode li:hover {
  color: rgba(234, 198, 69, 1);
} */
/* .category-dark-hover {
  color: rgba(234, 198, 69, 1);
} */

/* .categories-list-dark-mode .category-active {
  color: rgba(234, 198, 69, 1);
} */

.dark-mode .categories-list .category-active {
  color: #eac645;
}

.dark-mode .box-popup-menu {
  background: #202024;
  border-color: #fff;
}

.dark-mode .info-description {
  color: #fff;
}

.dark-mode .list-card-amazon-url {
  filter: brightness(600%);
  /* mix-blend-mode: luminosity; */
}

.dark-mode .list-card-amazon-url:hover {
  filter: brightness(400%);
}

.dark-mode .icon-closes-btn-popup {
  stroke: #fff;
}

.dark-mode .info-by_links {
  filter: brightness(140%);
}

.dark-mode .btn-addto-card {
  background-color: transparent;
  color: #fff;
}

.dark-mode .btn-remove-card {
  background-color: transparent;
  color: #fff;
}

.dark-mode .addto-card-congrat {
  color: rgba(255, 255, 255, 0.5);
}
/* Spiner test  */

/* .loader {
  position: relative;
  display: flex;
  display: none;
}
.loader:before,
.loader:after {
  content: '';
  width: 15px;
  height: 15px;
  display: inline-block;
  position: relative;
  margin: 0 5px;
  border-radius: 50%;
  color: greenyellow;
  background: currentColor;
  box-shadow: 50px 0, -50px 0;
  animation: left 1s infinite ease-in-out;
}
.loader:after {
  color: #ff3d00;
  animation: right 1.1s infinite ease-in-out;
}

@keyframes right {
  0%,
  100% {
    transform: translateY(-10px);
  }
  50% {
    transform: translateY(10px);
  }
}

@keyframes left {
  0%,
  100% {
    transform: translateY(10px);
  }
  50% {
    transform: translateY(-10px);
  }
} */

